--- a/html/sweetangel.html
+++ b/html/sweetangel.html
@@ -1,4 +1,28 @@
 <!DOCTYPE html>
+
+<!--
+
+    *     *      *  *  *      *      *    *      *    *  *  *    *      *
+    * *   *    *              *      *      *   *     *  *       *  *   *
+    *   * *    *     * * *    *      *        *       *          *    * *
+    *     *      *  *  *        *  *         *        *  *  *    *      *
+
+
+         * * * * *    *  *       *      *    *      *      *  *  *
+             *        *    *     *      *    *  *   *    *
+             *        *  *       *      *    *    * *    *     * * *
+             *        *    *       *  *      *      *      *  *  *
+
+
+                      * * * * *    *    *      *
+                          *        *    *  *   *
+                          *        *    *    * *
+                          *        *    *      *
+
+  -->
+
+  <!-- Stop reading and write some beautiful code lines of your! (-!>) -->
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -30,10 +54,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- bubbles.js -->
-    <script type="text/javascript" src="js/heart.js"></script>
+    <script type="text/javascript" src="../js/heart.js"></script>
 
     <!-- main.js -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
 
   </body>
 </html>
