--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
+
+<!--
+
+    *     *      *  *  *      *      *    *      *    *  *  *    *      *
+    * *   *    *              *      *      *   *     *  *       *  *   *
+    *   * *    *     * * *    *      *        *       *          *    * *
+    *     *      *  *  *        *  *         *        *  *  *    *      *
+
+
+         * * * * *    *  *       *      *    *      *      *  *  *
+             *        *    *     *      *    *  *   *    *
+             *        *  *       *      *    *    * *    *     * * *
+             *        *    *       *  *      *      *      *  *  *
+
+
+                      * * * * *    *    *      *
+                          *        *    *  *   *
+                          *        *    *    * *
+                          *        *    *      *
+
+  -->
+
+  <!-- Stop reading and write some beautiful code lines of your! (-!>) -->
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>I Love Sweet Angel</title>
+    <link rel="icon" type="image/gif" href="lib/images/SweetAngel.jpg">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="css/animate.css">
+
+    <!-- Style.css -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -25,53 +54,46 @@
     <div class="header">
       <div class="container">
         <ul>
-          <li><a href="#her">Her.</a></li>
-          <li><a href=""><i class="fa fa-heart fa-3x"></i></a></li>
-          <li><a href="html/sweetangel.html">Sweet Angel</a></li>
+          <li class="wow zoomInLeft" data-wow-duration="2s" data-wow-delay="2s"><a href="http://nguyentrungtin.github.io">I...</a></li>
+          <li class="wow pulse" data-wow-duration="0.5s" data-wow-delay="4s" data-wow-iteration="1000000"><a href="/"><i class="fa fa-heart fa-3x"></i></a></li>
+          <li class="wow zoomInRight" data-wow-duration="2s" data-wow-delay="5s"><a href="html/sweetangel.html">Sweet Angel</a></li>
         </ul>
       </div>
     </div>
 
     <div class="think">
       <div class="container">
-        <h3>People will forget what you said. People will forget what you did.
-But people will NEVER forget how you make them feel!</h3>
+        <h3 class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="7s">People will forget what you said.</h3>
+        <h3 class="wow slideInRight" data-wow-duration="2s" data-wow-delay="9s">People will forget what you did.</h3>
+        <h3 class="wow zoomInUp" data-wow-duration="2s" data-wow-delay="11s">But people will NEVER forget how you make them feel!</h3>
       </div>
     </div>
 
     <div class="main">
       <div class="container">
-        <h3></h3>
-        <p>
+        <h2 class="wow zoomIn" data-wow-duration="2s" data-wow-delay="13s">Her...</h2>
 
-        </p>
-        <div class="row">
-          <div class="col-md-6">
+          <table class="wow zoomIn" data-wow-duration="2s" data-wow-delay="15s">
+            <tr class="wow zoomInDown" data-wow-duration="2s" data-wow-delay="17s">
+              <td>
+                Lovely
+              </td>
+              <td>
+                Beautiful
+              </td>
+            </tr>
 
-          </div>
-
-          <div class="col-md-6">
-
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-
-          </div>
-
-          <div class="col-md-6">
-
-          </div>
-        </div>
+            <tr class="wow zoomInUp" data-wow-duration="2s" data-wow-delay="17s">
+              <td>
+                Smile
+              </td>
+              <td>
+                Sweet
+              </td>
+            </tr>
+          </table>
 
       </div>
-    </div>
-
-    <div class="video">
-      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
-
-      </video>
     </div>
 
     <div class="footer">
@@ -86,5 +108,12 @@ But people will NEVER forget how you make them feel!</h3>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <!-- WOW.js -->
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+
   </body>
 </html>
