--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <!-- Style.css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- MagnificPopup.css -->
+    <link rel="stylesheet" href="css/magnificPopup.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -73,24 +76,278 @@
 
     <div class="main">
       <div class="container">
-        <h2 class="wow zoomIn" data-wow-duration="2s" data-wow-delay="13s">Her...</h2>
+        <h2 class="wow zoomIn" data-wow-duration="2s" data-wow-delay="13s"><a href="html/sweetangel.html">Her...</a></h2>
 
           <table class="wow zoomIn" data-wow-duration="2s" data-wow-delay="15s">
             <tr class="wow zoomInDown" data-wow-duration="2s" data-wow-delay="17s">
               <td>
-                <a class="ajax-popup-link" href=""><i></i> Lovely <i></i></a>
+                <a class="open-popup-link" href="#lovely"><i></i> Lovely <i></i></a>
+
+                  <div id="lovely" class="pink-popup mfp-hide">
+
+                    <h4><i class="fa fa-heart"></i> She is lovely <i class="fa fa-heart"></i></h4>
+
+                    <div id="carousel-lovely" class="carousel slide" data-ride="carousel">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#carousel-lovely" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="1"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="2"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="3"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="4"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="5"></li>
+                        <li data-target="#carousel-lovely" data-slide-to="6"></li>
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+
+                        <div class="item active">
+                          <img class="img-responsive" src="lib/images/SweetAngel.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-10.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-1.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/lip.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/RedLip.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-12.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-2.jpg" alt="Sweet Angel">
+                        </div>
+
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-lovely" role="button" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-lovely" role="button" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+
+                  </div>
+
               </td>
               <td>
-                <a class="ajax-popup-link" href=""><i></i> Beautiful <i></i></a>
+                <a class="open-popup-link" href="#beautiful"><i></i> Beautiful <i></i></a>
+
+                  <div id="beautiful" class="pink-popup mfp-hide">
+
+                    <h4><i class="fa fa-heart"></i> She is beautiful <i class="fa fa-heart"></i></h4>
+
+                    <div id="carousel-beautiful" class="carousel slide" data-ride="carousel">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#carousel-beautiful" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-beautiful" data-slide-to="1"></li>
+                        <li data-target="#carousel-beautiful" data-slide-to="2"></li>
+                        <li data-target="#carousel-beautiful" data-slide-to="3"></li>
+                        <li data-target="#carousel-beautiful" data-slide-to="4"></li>
+                        <li data-target="#carousel-beautiful" data-slide-to="5"></li>
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+
+                        <div class="item active">
+                          <img class="img-responsive" src="lib/images/Her.jpg" alt="Sweet Angel">
+                        </div>
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/Angel.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-8.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-6.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-4.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-16.jpg" alt="Sweet Angel">
+                        </div>
+
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-beautiful" role="button" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-beautiful" role="button" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+
+                  </div>
+
               </td>
             </tr>
 
             <tr class="wow zoomInUp" data-wow-duration="2s" data-wow-delay="17s">
               <td>
-                <a class="ajax-popup-link" href="html/smile.html"><i></i> Smile <i></i></a>
+                <a class="open-popup-link" href="#smile"><i></i> Smile <i></i></a>
+
+                  <div id="smile" class="pink-popup mfp-hide">
+
+                    <h4><i class="fa fa-heart"></i> She smile <i class="fa fa-heart"></i></h4>
+
+                    <div id="carousel-smile" class="carousel slide" data-ride="carousel">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#carousel-smile" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-smile" data-slide-to="1"></li>
+                        <li data-target="#carousel-smile" data-slide-to="2"></li>
+                        <li data-target="#carousel-smile" data-slide-to="3"></li>
+                        <li data-target="#carousel-smile" data-slide-to="4"></li>
+                        <li data-target="#carousel-smile" data-slide-to="5"></li>
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+
+                        <div class="item active">
+                          <img class="img-responsive" src="lib/images/angel-5.jpg" alt="Sweet Angel">
+                        </div>
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-9.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-14.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-11.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-17.jpg" alt="Sweet Angel">
+                        </div>
+
+                        <div class="item">
+                          <img class="img-responsive" src="lib/images/angel-3.jpg" alt="Sweet Angel">
+                        </div>
+
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-smile" role="button" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-smile" role="button" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+
+                  </div>
+
               </td>
               <td>
-                <a class="ajax-popup-link" href="html/sweetangel.html"><i></i> Sweet <i></i></a>
+                <a class="open-popup-link" href="#sweet"><i></i> Sweet <i></i></a>
+
+                <div id="sweet" class="pink-popup mfp-hide">
+
+                  <h4><i class="fa fa-heart"></i> She is sweet <i class="fa fa-heart"></i></h4>
+
+                  <div id="carousel-sweet" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-sweet" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="1"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="3"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="4"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="5"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="6"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="7"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="8"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+
+                      <div class="item active">
+                        <div class="embed-responsive embed-responsive-16by9">
+                          <iframe class="embed-responsive-item" src="lib/videos/SweetAngel.mp4"></iframe>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="embed-responsive embed-responsive-16by9">
+                          <iframe class="embed-responsive-item" src="lib/videos/Angel.mp4"></iframe>
+                        </div>
+                      </div>
+
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/SweetAngel.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/Her.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/angel-6.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/lip.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/NgocLinh.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/Mikan.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/Her....jpg" alt="Sweet Angel">
+                      </div>
+
+                      </div>
+
+                      <!-- Controls -->
+                      <a class="left carousel-control" href="#carousel-sweet" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="right carousel-control" href="#carousel-sweet" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+
+                </div>
+
               </td>
             </tr>
           </table>
@@ -131,36 +388,12 @@
     </script>
 
     <script type="text/javascript">
-      $('.ajax-popup-link').magnificPopup({
-        type: 'ajax'
+      $(document).ready(function() {
+        $('.open-popup-link').magnificPopup({
+      type:'inline',
+      midClick: true // Allow opening popup on middle mouse click. Always set it to true if you don't provide alternative source in href.
+    });
       });
-
-      ajax: {
-      settings: null, // Ajax settings object that will extend default one - http://api.jquery.com/jQuery.ajax/#jQuery-ajax-settings
-      // For example:
-      // settings: {cache:false, async:false}
-
-      cursor: 'mfp-ajax-cur', // CSS class that will be added to body during the loading (adds "progress" cursor)
-      tError: '<a href="%url%">The content</a> could not be loaded.' //  Error message, can contain %curr% and %total% tags if gallery is enabled
-      }
-
-      callbacks: {
-        parseAjax: function(mfpResponse) {
-    // mfpResponse.data is a "data" object from ajax "success" callback
-    // for simple HTML file, it will be just String
-    // You may modify it to change contents of the popup
-    // For example, to show just #some-element:
-    // mfpResponse.data = $(mfpResponse.data).find('#some-element');
-
-    // mfpResponse.data must be a String or a DOM (jQuery) element
-
-      console.log('Ajax content loaded:', mfpResponse);
-    },
-      ajaxContentAdded: function() {
-    // Ajax content is loaded and appended to DOM
-      console.log(this.content);
-    }
-    }
     </script>
 
   </body>
