I :heart: Sweet Angel !
I :heart: Sweet Angel !

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>I Love Sweet Angel</title>
-    <link rel="icon" type="image/gif" href="lib/images/SweetAngel.jpg">
+    <link rel="icon" type="image/jpg" href="lib/images/SweetAngel.jpg">
     <meta name="author" content="Nguyen Trung Tin">
-    <link rel="canonical" href="http://ilovesweetangel.github.io/">
+    <link rel="canonical" href="http://mysweetangel.github.io/">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -320,6 +320,10 @@
 
                       <div class="item">
                         <img class="img-responsive" src="lib/images/angel-6.jpg" alt="Sweet Angel">
+                      </div>
+
+                      <div class="item">
+                        <img class="img-responsive" src="lib/images/Angel-In-Blue.jpg" alt="Sweet Angel">
                       </div>
 
                       <div class="item">
