--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                       <li data-target="#carousel-sweet" data-slide-to="6"></li>
                       <li data-target="#carousel-sweet" data-slide-to="7"></li>
                       <li data-target="#carousel-sweet" data-slide-to="8"></li>
+                      <li data-target="#carousel-sweet" data-slide-to="9"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
