I :heart: Sweet Angel!
I :heart: Sweet Angel!

--- a/index.html
+++ b/index.html
@@ -361,6 +361,9 @@
               </td>
             </tr>
           </table>
+          <div class="letter">
+            <a class="loveletter" href="html/loveletter.html" target="_blank"><i class="fa fa-heart wow pulse" data-wow-duration="0.5s" data-wow-iteration="1000000"></i> Love Letter <i class="fa fa-heart wow pulse" data-wow-duration="0.5s" data-wow-iteration="1000000"></i></a>
+          </div>
 
       </div>
     </div>
@@ -368,7 +371,7 @@
     <div class="footer">
       <div class="container">
         <p>
-          <a href="http://nguyentrungtin.github.io" target="_blank">I</a> <i class="fa fa-heart"></i> Sweet Angel !
+          <i class="fa fa-rocket"></i> by <a href="http://nguyentrungtin.github.io" target="_blank">Ông Trùm</a> with <i class="fa fa-heart wow pulse" data-wow-duration="0.5s" data-wow-iteration="1000000"></i>
         </p>
       </div>
     </div>
