--- a/html/loveletter.html
+++ b/html/loveletter.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>I Love Sweet Angel</title>
-    <link rel="icon" type="image/jpg" href="lib/images/SweetAngel.jpg">
+    <link rel="icon" type="image/jpg" href="../lib/images/SweetAngel.jpg">
     <meta name="author" content="Nguyen Trung Tin">
     <link rel="canonical" href="http://ilovesweetangel.github.io/">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,6 +21,11 @@
     <![endif]-->
 
     <style media="screen">
+	@font-face {
+		font-family: RoundhandScript;
+		src: url(../font/RoundhandScriptBold.ttf);	
+	}
+	
     body {
       background: url(../lib/images/SweetAngel.jpg) transparent no-repeat center center fixed;
       -webkit-background-size: cover;
@@ -30,8 +34,8 @@
       background-size: cover;
       filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../lib/images/SweetAngel.jpg', sizingMethod='scale');
       -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../lib/images/SweetAngel.jpg', sizingMethod='scale')";
-      color: white;
-      font-family: 'Dancing Script', cursive;
+      color: violet;
+	  font-family: 'RoundhandScript', cursive;
       }
       .header h1 {
         font-size: 50px;
@@ -52,6 +56,10 @@
 
       .content p i.fa-heart {
         color: red;
+      }
+
+      .content {
+        padding-bottom: 20px;
       }
 
     </style>
