--- a/html/sweetangel.html
+++ b/html/sweetangel.html
@@ -29,6 +29,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>I Love Sweet Angel</title>
+    <meta name="description" content="Điền Thị Ngọc Linh - Sweet Angel in my heart - From Ông Trùm with love"  >
+    <meta name="keywords" content="I Love Sweet Angel, Sweet Angel, Ngọc Linh, Điền Thị Ngọc Linh,  Điền Ngọc Linh, Mikan Sakura, Ông Trùm, I fall in love">
+    <link rel="icon" type="image/jpg" href="../lib/images/SweetAngel.jpg">
+    <meta name="author" content="Nguyen Trung Tin">
+    <link rel="canonical" href="http://ilovesweetangel.github.io/">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -48,6 +53,8 @@
   <body>
 
         <canvas id="myCanvas"></canvas>
+
+        <iframe width="100%" height="166px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/225714518%3Fsecret_token%3Ds-hwglV&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
