--- a/html/notes.html
+++ b/html/notes.html
@@ -103,6 +103,13 @@
         margin-left: auto;
         margin-right: auto;
       }
+	  
+	  footer {
+		font-family: Arial, sans-serif;
+		text-align: center;
+		color: black;
+		font-size: 21px;
+	  }
 
     </style>
 
@@ -270,6 +277,71 @@
           <p>
             From Ông Trùm with <i class="fa fa-heart"></i>
           </p>
+		  
+		  <!-- TODO: Khi Con Tim bị bấn loạn -->
+        <p class="line">
+          /* ------------------------------- */
+        </p>
+		
+		<h2>Khi Con Tim bấn loạn</h2>
+		
+		<p>Con Tim và Lý Trí. Con Tim - Lý Trí - Ngọc Linh - Cô Hoàng Anh.</p>
+
+		<p>Những từ ngữ luôn quấn quanh trí óc và khiến con tim ngạt thở.</p>
+		
+		<p>- Liệu Con Tim có thật sự rung động?</p>
+		
+		<p>- Có!</p>
+		
+		<p>- Khi Con Tim rung động mãnh liệt và bắt đầu bấn loạn, Lý Trí sẽ làm gì?</p>
+		
+		<p>Con Tim rung động là xuất phát điểm của một phản ứng đang bắt đầu xảy ra! Và khi nó bắt đầu bấn loạn là lúc phản ứng xảy ra mãnh liệt nhất! Xuyên suốt quá trình phản ứng đó, luôn có một chất xúc tác - thứ đã làm cho Tình Yêu và Hạnh phúc xuất hiện.</p>
+		
+		<p>Câu chuyện về Con Tim bấn loạn:</p>
+		
+		<p>"Chuyện xảy ra lần đầu tiên vào bốn năm trước. Lần thuyết trình đầu tiên vào năm nhất của Tín, môn cô Hoàng Anh. Linh đã đặt ra 5 câu hỏi. Và câu hỏi cuối cùng chính là dấu hiệu đầu tiên của một phản ứng tuyệt diệu bắt đầu xảy ra. Chất xúc tác đã xuất hiện. Lúc đó, Tín chỉ nhận ra rằng hình như mình đã nhận biết một điều gì đó đang xảy ra trong cơ thể. Con tim có những nhịp đập đầu tiên. Đầy ngọt ngào!<br />
+		
+		Năm hai. Nhịp đập đều đặn hơn.<br />
+		
+		Năm ba. Con Tim bắt đầu định hình được điều mà nó yêu. Nó bắt đầu chống lại Lý Trí. Nó lên tiếng theo từng nhịp đập ngày càng trở nên mạnh mẽ.<br />
+		
+		Năm tư. Những cảm xúc hiện ra rõ ràng. Con Tim lúc này đã hoàn toàn chống lại Lý Trí, nó tự do thả trôi theo từng dòng từng dòng cảm xúc. Bùng cháy mạnh mẽ và mạnh liệt. Phản ứng đã lên đến đỉnh điểm! Hạnh Phúc ngập tràn và chiếm lấy toàn bộ tâm hồn!<p>
+		
+		<p>Linh và cô Hoàng Anh. Hai người đến cùng một lúc. Là hai chất xúc tác để phản ứng trong Tín xảy ra!</p>
+		
+		<p>Linh là người chứng kiến hầu như toàn bộ quá trình phản ứng ấy. Linh đã chứng kiến cơn bùng nổ ấy diễn ra như thế nào và cũng chính là người đón nhận nguồn năng lượng từ cơn bùng nổ ấy!</p>
+		
+		<p>Nhưng. Linh là một "chất xúc tác đặc biệt". Và theo đúng nghĩa đen của từ đó, chất xúc tác đã không hề phản ứng và thay đổi sau phản ứng!</p>
+		
+		<p>Chỉ có Tín mới hiểu được mình đã phản ứng ra sao và biến đổi như thế nào!</p>
+		
+		<p>Yêu thì cứ yêu thôi! Và Tín đã yêu một cách lãng mạn như thế!</p>
+		
+		<p>Tín là người mang trong người "Tâm hồn của một đứa trẻ". Luôn mơ về "Những đôi cánh thiên thần".</p>
+		
+		<p>Tâm hồn của một đứa trẻ. Một tâm hồn luôn khao khát đến những điều tốt đẹp thật sự. Nhưng tâm hồn ấy lại sống giữa những kìm kẹp và những logic khó chịu mà người lớn đã đặt ra. Nó luôn muốn phá vỡ những điều khó chịu ấy nhưng không thoát ra được những ám ảnh không nguyên do.</p>
+		
+		<p>Tâm hồn của một đứa trẻ. Tâm hồn ấy tràn ngập những cảm xúc. Và cả những nỗi sợ hãi đánh mất những cảm xúc đó nữa. Vì vậy, tâm hồn đó vừa lãng mạn lại vừa sợ sự lãng mạn. Vừa ngọt ngào lại vừa sợ sự ngọt ngào!</p>
+		
+		<p>Tâm hồn của một đứa trẻ. Nhạy cảm và ngang bướng. Nó thừa biết rằng người mà nó muốn dành tặng những cảm xúc đặc biệt không thích nhận nó nhưng nó sẽ vẫn mặc kệ. Bất chấp điều đó, nó vẫn để cảm xúc của mình được bay bổng, được tự do, được thỏa thích chìm đắm trong viễn cảnh ngọt ngào mà nó tự tạo ra cho mình!</p>
+		
+		<p>Vào lúc phản ứng xảy ra mãnh liệt nhất. Tín đã mỡ toang cánh cửa tâm hồn mình - tâm hồn mà Tín đã không cho phép ai xâm phạm nó và chờ đợi Thiên Thần bước vào. Nhưng Thiên Thần chỉ mỉm cười và bay đi!</p>
+		
+		<p>Tín đủ nhạy cảm để hiểu rằng vì sao Linh đã không muốn bước vào cánh cửa đó. Có thể, Linh đã từng cảm thấy khó chịu vì tâm hồn đó đã mở toan ra như vậy. Nhưng vào một lúc nào đó, Linh sẽ nhận ra rằng để mở toan ra được như vậy, tâm hồn đó là một tâm hồn đầy nhạy cảm và tràn ngập những khao khát sống mãnh liệt mà không phải ai cũng có được!</p>
+		
+		<p>Bây giờ thì phản ứng đã kết thúc rồi. Tín là người đã để cho phản ứng đó đã xảy ra, thúc đẩy nó bùng nổ mãnh liệt và cũng chính là người kết thúc nó! Những điều dại dột hoàng loạt xảy ra liên tiếp trong ngày hôm nay và cơn mưa "like" vào những giây phút cuối cùng của ngày đặc biệt này cũng chính là những dấu hiệu của phản ứng bùng nổ đến đỉnh điểm và kết thúc. Con Tim đã nổ tung trong không gian tràn ngập những hạnh phúc. Cánh cửa tâm hồn đã chính thức khép lại! Mãi mãi!</p>
+		
+		<p>Linh là người duy nhất may mắn đã thấy được hình ảnh bên trong tâm hồn đó.</p>
+		
+		<p>Những điều tuyệt vời nhất chỉ xảy một lần duy nhất!</p>
+		
+		<p>Lúc điên nhất là lúc Con Tim rung động dữ dội nhất. Và đó cũng chính là lúc ta cảm thấy hạnh phúc nhất!</p>
+		
+		<p>3h15, Sáng, 21/10/2015</p>
+		
+		<p>Yêu Linh.</p>
+		
+		<footer>ÁC QUỶ HIỆN HÌNH...</footer>
 
       </div>
     </div>
